--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "moment": "^2.17.1",
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0",
-    "redux": "^3.6.0"
+    "react-router": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -40,6 +38,9 @@
     "mocha": "^2.4.5",
     "moment": "^2.17.1",
     "node-sass": "^3.4.2",
+    "react-addons-test-utils": "^0.14.7",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
